tests/algorithms/x/Lua/strings/anagrams.error
type: error[T003]: unknown function: read_file
  --> /workspace/mochi/tests/github/TheAlgorithms/Mochi/strings/anagrams.mochi:107:14

107 |   let text = read_file("words.txt")
    |              ^

help:
  Ensure the function is defined before it's called.